--- a/countries/korea.html
+++ b/countries/korea.html
@@ -18,6 +18,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
 
+	<link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -85,62 +86,7 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-course">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Available Universities</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-1.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Wadiya University </a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-2.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Yella Habibi</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-3.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Supreme University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-4.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Nadal University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 
 
@@ -149,8 +95,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Calender &amp; Semester times</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Want to Study in Korea</h2>
+					<p>A leading Asian powerhouse in education, technology and tourism, South Korea is another ‘Asian Tiger’, full of diverse culture, ambition and independence. Boasting one of the largest economies in the region, South Korea has invested strongly in research and education. The country’s higher education system was placed ninth in the system strength rankings, are South Korean universities are considered some of the most prestigious in Asia. The bustling and vibrant capital, Seoul, was ranked 10th in the Best Student Cities 2018, but nature-lovers will also be able to enjoy the country’s mountain peaks, natural parks and dense forests. 58 South Korean universities feature in the top 500 of the Asian rankings this year, with KAIST – Korea Advanced Institute of Science & Technology, located in the technological center of Daejeon, the highest ranked at eighth.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -174,13 +120,14 @@
                      	<ul class="pricing__feature-list">
 	                        <li class="pricing__feature">Starts</li>
 	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">Agent fee</li>
-	                        <li class="pricing__feature">Includes</li>
-	                        <li class="pricing__feature">WE also</li>
-	                        <li class="pricing__feature">Bannanana</li>
-	                         <li class="pricing__feature">Peaches and cream</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                   </div>
 					</div>
@@ -199,47 +146,19 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
+	                        <li class="pricing__feature">Starts</li>
+	                        <li class="pricing__feature">Ends</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                  </div>
 					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="pricing__item">
-                  	<div class="wrap-price">
-	                     <h3 class="pricing__title">Others</h3>
-							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency"></span>
-                        </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period"> <h2>All Year</h2> </span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
-                     </div>
-                  </div>
-               </div>
-            </div>
-			</div>
 		</div>
 	</div>
 
