--- a/countries/taiwan.html
+++ b/countries/taiwan.html
@@ -18,6 +18,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
 
+	<link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -85,62 +86,6 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-course">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Available Universities</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-1.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Wadiya University </a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-2.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Yella Habibi</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-3.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Supreme University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-4.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Nadal University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 
 
@@ -149,8 +94,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Calender &amp; Semester times</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Want Taiwan <b>?</b> </h2>
+					<p>‘Asian Tiger’ Taiwan is ideal for students interested in technology and innovation. It’s famed for its world-leading tech-industry, with many universities located close to its answer to the US’s Silicon Valley, Hsinchu Science Park. Overall, Taiwan has a strong higher education system (ranked 19th in the QS Higher Education System Strength Rankings), as well as a lively and varied culture which mixes both the traditional and modern, with influences from mainland China evident in its architecture, cuisine and of course the official language. An increasing number of overseas students are choosing to study in Taiwan, which like Malaysia is quite affordable in terms of both tuition fees and living costs. Taiwan has 36 entrants in the latest Asian rankings, with five in the top 50. Its highest ranked institution is National Taiwan University (NTU) in 22nd place.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -174,13 +119,14 @@
                      	<ul class="pricing__feature-list">
 	                        <li class="pricing__feature">Starts</li>
 	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">Agent fee</li>
-	                        <li class="pricing__feature">Includes</li>
-	                        <li class="pricing__feature">WE also</li>
-	                        <li class="pricing__feature">Bannanana</li>
-	                         <li class="pricing__feature">Peaches and cream</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                   </div>
 					</div>
@@ -199,45 +145,19 @@
                      </div>
                      <div class="wrap-price">
                      	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
+	                        <li class="pricing__feature">Starts</li>
+	                        <li class="pricing__feature">Ends</li>
+	                        <li class="pricing__feature">English Majors</li>
+	                        <li class="pricing__feature">Chinese Majors</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                  </div>
 					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="pricing__item">
-                  	<div class="wrap-price">
-	                     <h3 class="pricing__title">Others</h3>
-							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency"></span>
-                        </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period"> <h2>All Year</h2> </span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
-                     </div>
-                  </div>
-               </div>
             </div>
 			</div>
 		</div>
