--- a/countries/indonesia.html
+++ b/countries/indonesia.html
@@ -18,6 +18,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
 
+	<link rel="stylesheet" href="fontawesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -102,7 +103,7 @@
 						<div class="pricing__item">
 							<div class="wrap-price">
 								 <!-- <div class="icon icon-user2"></div> -->
-	                     <h3 class="pricing__title">Fall Intake</h3>
+	                     <h3 class="pricing__title">March Intake</h3>
 	                     <!-- <p class="pricing__sentence">Single user license</p> -->
 							</div>
                      <div class="pricing__price">
@@ -121,9 +122,9 @@
 	                        <li class="pricing__feature">Chinese Majors</li>
 	                        <li class="pricing__feature">Language year</li>
 	                        <li class="pricing__feature">Bachelors</li>
-							 <li class="pricing__feature">Masters</li>
-							 <li class="pricing__feature">PhD</li>
-							 <li class="pricing__feature">Cultural Visit</li>
+							<li class="pricing__feature">Masters</li>
+							<li class="pricing__feature">PhD</li>
+							<li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
                      </div>
                   </div>
@@ -131,7 +132,7 @@
 					<div class="col-md-4 animate-box">
 						<div class="pricing__item">
 							<div class="wrap-price">
-	                     <h3 class="pricing__title">Autumn Intake</h3>
+	                     <h3 class="pricing__title">September Intake</h3>
 							</div>
                      <div class="pricing__price">
                         <span class="pricing__anim pricing__anim--1">
